--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -44,6 +44,7 @@ dataChange = currentLocale === 'es' ? dataContacto : dataContactoEN;
                   href={url}
                   target="_blank"
                   rel="noopener noreferrer"
+                  aria-label={title}
                 >
                   {title}
                 </a>
