--- a/src/components/LangPicker.astro
+++ b/src/components/LangPicker.astro
@@ -11,6 +11,7 @@ const i18n = getI18N({ currentLocale });
   data-dropdown-toggle="dropdownTheme"
   class="btn btn-sm btn-ghost hover:btn-outline px-3"
   type="button"
+  aria-label="Boton de lenguajes"
 >
   <svg
     aria-hidden="true"
