--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -50,7 +50,7 @@ const i18n = getI18N({ currentLocale });
                 {repo.topics ? (
                   <div class="flex flex-wrap gap-2">
                     {repo.fork === true ? (
-                      <span class="bg-accent text-white text-sm px-3 py-1 rounded-full">
+                      <span class="bg-base-content text-base-100 font-semibold px-3 py-1 rounded-full">
                         PR
                       </span>
                     ) : (
