--- a/src/components/theme/ThemeButton.astro
+++ b/src/components/theme/ThemeButton.astro
@@ -11,6 +11,7 @@ const i18n = getI18N({ currentLocale });
   data-dropdown-toggle="dropdownLang"
   class="btn btn-sm btn-ghost hover:btn-outline px-3"
   type="button"
+   aria-label="Boton de temas"
 >
   <svg
     aria-hidden="true"
