fix: Se cambia el icono de temas y se arregla el select para el cambio de versiones

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -18,7 +18,7 @@ import { VersionSelect } from './version/ButtonVersion.jsx';
           loading="lazy"
         />
       </a>
-      <VersionSelect client:load />
+      <VersionSelect client:idle />
     </div>
   </div>
 
