--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import { getI18N } from '../i18n';
 import Bubble from './Bubble.astro';
+import { Toast } from '../components/Toast.tsx';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
@@ -10,9 +11,8 @@ const i18n = getI18N({ currentLocale });
   <div class="hero-content text-center z-40">
     <Bubble />
     <div class="max-w-lg">
-      <h1
-        class="text-6xl xl:text-8xl lg:text-8x1 md:text-6xl font-bold"
-      >
+      <Toast currentLocale={currentLocale} client:load />
+      <h1 class="text-6xl xl:text-8xl lg:text-8x1 md:text-6xl font-bold">
         {i18n.HEADER.HEADER_TITLE}
       </h1>
       <span
