--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -1,4 +1,4 @@
-<!-- ---
+---
 import { getI18N } from '../i18n';
 import { reposDeseados } from '../utils/dataRepoPinned.astro';
 import Bubble from './Bubble.astro';
@@ -81,4 +81,4 @@ const i18n = getI18N({ currentLocale });
       </div>
     </div>
   </div>
-</div> -->
+</div>
