--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,8 +9,6 @@ const { currentLocale } = Astro;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
     <meta name="description" content="Portafolio muke78" />
-    <!-- <meta http-equiv="refresh" content="0;url=/es/" /> -->
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
@@ -19,8 +17,10 @@ const { currentLocale } = Astro;
     <meta property="og:title" content="Porafolio" />
     <meta
       property="og:description"
-      content="Landing Page para proyecto de banco e inversiones online"
+      content="Portafolio de Erick Gonzalez para mostrar su propio perfil"
     />
+    <meta property="og:image" content="https://portafolio-vercel-deploy.vercel.app/kdl.webp">
+    <meta property="og:site_name" content="Portafolio">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
@@ -29,18 +29,12 @@ const { currentLocale } = Astro;
     />
     <meta property="twitter:title" content="Porafolio" />
     <meta
-      property="twitter:description"
-      content="Landing Page para proyecto de banco e inversiones online"
-    />
-    <meta
       property="twitter:image"
       content="https://portafolio-vercel-deploy.vercel.app/kdl.webp"
     />
-    <!-- Otros metas importantes -->
+   
     <meta name="theme-color" content="#6f37cf" />
-    <!-- Asegúrate de que el color refleje tu marca -->
     <meta name="robots" content="index, follow" />
-    <!-- Cambiado a index, follow para permitir la indexación -->
     <meta name="author" content="muke78" />
     <meta name="copyright" content="Copyright © 2024" />
     <link rel="icon" type="image/svg+xml" href="/kdl.webp" />
