--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -88,21 +88,21 @@ const i18n = getI18N({ currentLocale });
             <div class="stat">
               <div class="stat-value">+2</div>
               <div class="">{i18n.ABOUTME.ABOUT_EXPIRENCE[0].EXPIRENCE}</div>
-              <div class="stat-title">
+              <div class="stat-desc">
                 {i18n.ABOUTME.ABOUT_EXPIRENCE[0].EXPIRENCE_ABOUT}
               </div>
             </div>
             <div class="stat">
               <div class="stat-value">+7</div>
               <div class="">{i18n.ABOUTME.ABOUT_EXPIRENCE[1].PROJECTS}</div>
-              <div class="stat-title">
+              <div class="stat-desc">
                 {i18n.ABOUTME.ABOUT_EXPIRENCE[1].PROJECTS_ABOUT}
               </div>
             </div>
             <div class="stat">
               <div class="stat-value">4+</div>
               <div class="">{i18n.ABOUTME.ABOUT_EXPIRENCE[2].WORKING}</div>
-              <div class="stat-title">
+              <div class="stat-desc">
                 {i18n.ABOUTME.ABOUT_EXPIRENCE[2].WORKING_ABOUT}
               </div>
             </div>
@@ -113,7 +113,7 @@ const i18n = getI18N({ currentLocale });
           <a
             download
             href="/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
-            class="btn btn-secondary w-full"
+            class="btn btn-primary w-full"
             aria-label="Descargar cv para saber mas acerca de mi"
           >
             {i18n.ABOUTME.ABOUT_DOWNLOAD_CV}
