--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import { getI18N } from '../i18n';
+import { ImageContrast } from './ImageContrast';
 
 const v = import.meta.env.VERSION;
 
@@ -11,10 +12,7 @@ const i18n = getI18N({ currentLocale });
   class="footer footer-center bg-gradient-to-tl from-primary to-accent backdrop-blur-[30px] backdrop-saturate-[180%] rounded-t-lg text-base-100 p-7"
 >
   <aside>
-    <div>
-      <div class="text-2xl font-bold leading-4 text-base-100">KHE</div>
-      <div class="text-2xl font-bold text-base-100">LDE</div>
-    </div>
+    <ImageContrast client:load />
     <p class="font-bold flex items-center justify-center">
       {i18n.FOOTER.FOOTER_MAKE}
       <svg
@@ -46,48 +44,48 @@ const i18n = getI18N({ currentLocale });
       <p>{i18n.FOOTER.FOOTER_DESCRIPTION}</p>
     </div>
     <div class="flex justify-center items-center flex-col">
-      <img src="/favicon.svg" alt="astro" class="w-11 fill-current" />
+      <img src="/favicon.svg" alt="astro" class="w-9 fill-current" />
       <p class="font-semibold">Version {v}</p>
     </div>
     <p>
       Copyright © {new Date().getFullYear()} - {i18n.FOOTER.FOOTER_ALL_RIGHT}
     </p>
+    <nav>
+      <div class="grid grid-flow-col gap-4">
+        <a href="https://github.com/muke78" target="_blank">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            id="github"
+            width="24"
+            height="24"
+            class="fill-current"
+            aria-label="Saber mas acerca de mis repositorios y lo que he hecho"
+          >
+            <path
+              d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/erick-miguel-gonz%C3%A1lez-rivera-96265b248/"
+          target="_blank"
+          aria-label="Saber mas acerca de experiencia"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            id="github"
+            width="24"
+            height="24"
+            class="fill-current"
+          >
+            <path
+              d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"
+            ></path>
+          </svg>
+        </a>
+      </div>
+    </nav>
   </aside>
-  <nav>
-    <div class="grid grid-flow-col gap-4">
-      <a href="https://github.com/muke78" target="_blank">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          id="github"
-          width="24"
-          height="24"
-          class="fill-current"
-          aria-label="Saber mas acerca de mis repositorios y lo que he hecho"
-        >
-          <path
-            d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"
-          ></path>
-        </svg>
-      </a>
-      <a
-        href="https://www.linkedin.com/in/erick-miguel-gonz%C3%A1lez-rivera-96265b248/"
-        target="_blank"
-        aria-label="Saber mas acerca de experiencia"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          id="github"
-          width="24"
-          height="24"
-          class="fill-current"
-        >
-          <path
-            d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"
-          ></path>
-        </svg>
-      </a>
-    </div>
-  </nav>
 </footer>
