--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -31,18 +31,16 @@ dataChange = currentLocale === 'es' ? dataSkills : dataSkillsEN;
           >
             {
               dataChange.map(({ time, area, title, images }) => (
-                <article class="flex max-w-xl flex-col items-start justify-between">
-                  <div class="flex items-center gap-x-4 text-xs">
+                <article class="flex flex-col max-w-xl">
+                  <div class="flex justify-center items-center gap-x-4 text-xs">
                     <time>{time}</time>
-                    <span class="relative z-10 rounded-full bg-secondary px-3 py-1.5 font-medium text-base-100">
+                    <span class="relative z-10 rounded-full bg-primary px-3 py-1.5 font-medium text-base-100">
                       {area}
                     </span>
                   </div>
-                  <div class="group relative">
+                  <div class="group relative flex flex-col items-center justify-center">
                     <h3 class="mt-3 text-lg font-semibold leading-6">
-                      <a>
-                        <span class="text-lg text-base-content">{title}</span>
-                      </a>
+                      <span class="text-lg text-base-content">{title}</span>
                     </h3>
                     {images.map((image) => (
                       <img
