--- a/src/utils/dataRepoPinned.astro
+++ b/src/utils/dataRepoPinned.astro
@@ -6,7 +6,7 @@ export const reposDeseados = [
   'khelde.io',
   'Sistema_Numerico',
   'HeroApp',
-  'Custom-hooks',
+  // 'Custom-hooks',
   'Portafolio',
   'Comandos-Git',
   'BackendTask'
