--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -111,10 +111,10 @@ const i18n = getI18N({ currentLocale });
 
         <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2 lg:mt-44">
           <a
-            download
-            href="/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
+            href="https://cdn-files-occ.s3.amazonaws.com/documents/e7/e7kwdTt9hk2iKtEv2YJ29Q2/resumefile/CV-Erick-Miguel-Gonzalez-Rivera.pdf?AWSAccessKeyId=AKIAVBUMCCY2NGVEAT5Y&Expires=1730175134&Signature=hPo0yjVDfwiFAG4lz5mo6UwDGks%3D"
+            target="_blank"
             class="btn btn-primary w-full"
-            aria-label="Descargar cv para saber mas acerca de mi"
+            aria-label="Ver cv para saber mas acerca de mi"
           >
             {i18n.ABOUTME.ABOUT_DOWNLOAD_CV}
           </a>
