fix: Se mejora el responsive

--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -20,7 +20,7 @@ const i18n = getI18N({ currentLocale });
     />
     <div class="max-w-5xl">
       <div>
-        <h2 class="text-6xl font-bold mb-32 mt-20">
+        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-36">
           {i18n.PROJECTS.PROJECTS_TITLE}
         </h2>
       </div>
