--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -14,7 +14,7 @@ const i18n = getI18N({ currentLocale });
     />
     <div class="max-w-5xl">
       <div>
-        <h2 class="text-6xl font-bold mt-20 mb-36">
+        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-36">
           {i18n.ABOUTME.ABOUT_TITLE}
         </h2>
       </div>
@@ -23,7 +23,7 @@ const i18n = getI18N({ currentLocale });
         <div class="lg:col-span-2 lg:row-span-3">
           <div class="avatar px-3">
             <div
-              class="ring-primary ring-offset-base-100 w-80 lg:w-96 rounded-full ring ring-offset-2"
+              class="ring-primary ring-offset-base-100 w-72 md:w-80 lg:w-96 rounded-full ring ring-offset-2"
             >
               <img src="/yop.webp" alt="muke78" loading="lazy" />
             </div>
