--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -18,7 +18,7 @@ dataChange = currentLocale === 'es' ? dataContacto : dataContactoEN;
     />
 
     <div class="max-w-5xl mx-auto">
-      <h2 class="text-6xl font-bold mb-32 mt-20">
+      <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-36">
         {i18n.CONTACT.CONTACT_TITLE}
       </h2>
 
