--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -18,7 +18,7 @@ dataChange = currentLocale === 'es' ? dataSkills : dataSkillsEN;
     />
     <div class="max-w-5xl">
       <div>
-        <h2 class="text-6xl font-bold mb-32 mt-20">
+        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-36">
           {i18n.SKILLS.SKILLS_TITLE}
         </h2>
       </div>
