--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import { getI18N } from '../i18n';
-import { ImageContrast } from './ImageContrast';
+import { ImageContrast } from './islands/ImageContrast';
 
 const v = import.meta.env.VERSION;
 
