--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,9 @@
 ---
 import ThemeButton from './theme/ThemeButton.astro';
-import ItemsNavbar from './ItemsNavbar.astro';
+import ItemsNavbar from './items/ItemsNavbar.astro';
 import LangPicker from '../components/LangPicker.astro';
 import { VersionSelect } from './version/ButtonVersion.tsx';
-import { ImageContrast } from './ImageContrast.tsx';
+import { ImageContrast } from './islands/ImageContrast.tsx';
 
 const { currentLocale } = Astro;
 ---
