--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -1,13 +1,11 @@
 ---
 import { getI18N } from '../i18n';
-import { dataSkills } from '../utils/dataHabilidades.astro';
-import { dataSkillsEN } from '../utils/dataHabilidadesEn.astro';
+
 import Bubble from './Bubble.astro';
+import ItemsHabilidades from './items/ItemsHabilidades.astro';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
-let dataChange;
-dataChange = currentLocale === 'es' ? dataSkills : dataSkillsEN;
 ---
 
 <div class="hero bg-base-200 min-h-screen">
@@ -29,31 +27,7 @@ dataChange = currentLocale === 'es' ? dataSkills : dataSkillsEN;
           <div
             class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-2"
           >
-            {
-              dataChange.map(({ time, area, title, images }) => (
-                <article class="flex flex-col max-w-xl">
-                  <div class="flex justify-center items-center gap-x-4 text-xs">
-                    <time>{time}</time>
-                    <span class="relative z-10 rounded-full bg-primary px-3 py-1.5 font-medium text-base-100">
-                      {area}
-                    </span>
-                  </div>
-                  <div class="group relative flex flex-col items-center justify-center">
-                    <h3 class="mt-3 text-lg font-semibold leading-6">
-                      <span class="text-lg text-base-content">{title}</span>
-                    </h3>
-                    {images.map((image) => (
-                      <img
-                        class="mt-5 line-clamp-3 leading-6"
-                        src={image}
-                        alt={`Image for ${title}`}
-                        loading="lazy"
-                      />
-                    ))}
-                  </div>
-                </article>
-              ))
-            }
+            <ItemsHabilidades />
           </div>
         </div>
       </div>
