--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -1,6 +1,8 @@
 ---
 import { getI18N } from '../i18n';
 import Bubble from './Bubble.astro';
+import { Image } from 'astro:assets';
+import yop from '../../public/yop.webp';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
@@ -25,7 +27,7 @@ const i18n = getI18N({ currentLocale });
             <div
               class="ring-primary ring-offset-base-100 w-72 md:w-80 lg:w-96 rounded-full ring ring-offset-2"
             >
-              <img src="/yop.webp" alt="muke78" loading="lazy" />
+              <Image src={yop} alt="muke78" loading="lazy" />
             </div>
           </div>
 
