--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,10 +14,10 @@ const { currentLocale } = Astro;
       property="og:url"
       content="https://portafolio-vercel-deploy.vercel.app/"
     />
-    <meta property="og:title" content="Porafolio" />
+    <meta property="og:title" content="Web developer JR - IT Engineer" />
     <meta
       property="og:description"
-      content="Portafolio de Erick Gonzalez para mostrar su propio perfil"
+      content="Portafolio de Erick Gonzalez"
     />
     <meta property="og:image" content="https://portafolio-vercel-deploy.vercel.app/kdl.webp">
     <meta property="og:site_name" content="Portafolio">
