--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,13 +42,14 @@ const { currentLocale } = Astro;
     <link rel="canonical" href="https://portafolio-vercel-deploy.vercel.app/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script
-      is:inline
-      src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"
-    ></script>
+    
   </head>
   <body>
     <slot />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"
+    ></script>
   </body>
 </html>
 
