fix: Se carga los lenguajes de imagenes a lazy para carga dinamica

--- a/src/components/LangPicker.astro
+++ b/src/components/LangPicker.astro
@@ -59,6 +59,7 @@ const i18n = getI18N({ currentLocale });
               src={`${img.src}`}
               alt={`${label} flag`}
               class="inline-block w-6 h-6 mr-2"
+              loading="lazy"
             />
             {label}
           </a>
