--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -25,7 +25,7 @@ const i18n = getI18N({ currentLocale });
       >
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
           <div
-            class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-2"
+            class="mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-2"
           >
             <ItemsHabilidades />
           </div>
