--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -119,6 +119,15 @@ const i18n = getI18N({ currentLocale });
           >
             {i18n.ABOUTME.ABOUT_DOWNLOAD_CV}
           </a>
+
+          <!-- <a
+          href="https://cdn-files-occ.s3.amazonaws.com/documents/e7/e7kwdTt9hk2iKtEv2YJ29Q2/resumefile/CV-Erick-Miguel-Gonzalez-Rivera.pdf?AWSAccessKeyId=AKIAVBUMCCY2NGVEAT5Y&Expires=1730175134&Signature=hPo0yjVDfwiFAG4lz5mo6UwDGks%3D"
+          target="_blank"
+          class="btn btn-primary w-full"
+          aria-label="Ver cv para saber mas acerca de mi"
+        >
+          {i18n.ABOUTME.ABOUT_DOWNLOAD_CV}
+        </a> -->
         </div>
       </div>
     </div>
