--- a/src/components/items/ItemsHabilidades.astro
+++ b/src/components/items/ItemsHabilidades.astro
@@ -15,7 +15,6 @@ if (currentLocale === 'es') {
   dataChange = dataSkillsEN;
 }
 ---
-
 {
   dataChange.map(({ time, area, title, images }) => (
     <article class="flex flex-col max-w-xl">
@@ -29,14 +28,25 @@ if (currentLocale === 'es') {
         <h3 class="mt-3 text-lg font-semibold leading-6">
           <span class="text-lg text-base-content">{title}</span>
         </h3>
-        {images.map((image) => (
+        {images.map((image) => {
+  const techNames = image.split("?i=")[1].split(",");
+
+  return (
+    <div class="flex flex-wrap gap-4 justify-center mt-5">
+      {techNames.map((tech) => (
+        <div class="flex flex-col items-center">
           <img
-            class="mt-5 line-clamp-3 leading-6"
-            src={image}
-            alt={`Image for ${title}`}
+            class="leading-6"
+            src={`https://go-skill-icons.vercel.app/api/icons?i=${tech}`}
+            alt={`Icon for ${tech}`}
             loading="lazy"
           />
-        ))}
+          <span class="text-xs mt-1 text-base-content">{tech}</span> {/* Muestra el nombre de la tecnología */}
+        </div>
+      ))}
+    </div>
+  );
+})}
       </div>
     </article>
   ))
