--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -1,6 +1,7 @@
 ---
 import { getI18N } from '../i18n';
 import Bubble from './Bubble.astro';
+import { ModalWork } from './modal/ModalWork';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
@@ -100,7 +101,8 @@ const i18n = getI18N({ currentLocale });
               </div>
             </div>
             <div class="stat">
-              <div class="stat-value">4+</div>
+              <!-- <div class="stat-value">4+</div> -->
+               <ModalWork client:load/>
               <div class="">{i18n.ABOUTME.ABOUT_EXPIRENCE[2].WORKING}</div>
               <div class="stat-desc">
                 {i18n.ABOUTME.ABOUT_EXPIRENCE[2].WORKING_ABOUT}
