feat; Se agrega el modal y huella ecologica
Se arregla la visualizacion de el cv para verlo de forma externa

--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -101,7 +101,6 @@ const i18n = getI18N({ currentLocale });
               </div>
             </div>
             <div class="stat">
-              <!-- <div class="stat-value">4+</div> -->
                <ModalWork client:load/>
               <div class="">{i18n.ABOUTME.ABOUT_EXPIRENCE[2].WORKING}</div>
               <div class="stat-desc">
@@ -112,7 +111,7 @@ const i18n = getI18N({ currentLocale });
         </div>
 
         <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2 lg:mt-44">
-          <a
+          <!-- <a
             download
             href="/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
             target="_blank"
@@ -120,16 +119,16 @@ const i18n = getI18N({ currentLocale });
             aria-label="Descargar cv para saber mas acerca de mi"
           >
             {i18n.ABOUTME.ABOUT_DOWNLOAD_CV}
-          </a>
+          </a> -->
 
-          <!-- <a
-          href="https://cdn-files-occ.s3.amazonaws.com/documents/e7/e7kwdTt9hk2iKtEv2YJ29Q2/resumefile/CV-Erick-Miguel-Gonzalez-Rivera.pdf?AWSAccessKeyId=AKIAVBUMCCY2NGVEAT5Y&Expires=1730175134&Signature=hPo0yjVDfwiFAG4lz5mo6UwDGks%3D"
+          <a
+          href="https://docs.google.com/viewer?url=https://portafolio-vercel-deploy.vercel.app/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
           target="_blank"
           class="btn btn-primary w-full"
           aria-label="Ver cv para saber mas acerca de mi"
         >
           {i18n.ABOUTME.ABOUT_DOWNLOAD_CV}
-        </a> -->
+        </a>
         </div>
       </div>
     </div>
