--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -93,5 +93,9 @@ const i18n = getI18N({ currentLocale });
         </a>
       </div>
     </nav>
+    <span class="font-semibold text-1xl mt-4">Huella Ecologica - Calificacion <a type="button" class="btn btn-square btn-sm" target="_blank" aria-label="Huella ecologica de la pagina" href="https://www.websitecarbon.com/website/portafolio-vercel-deploy-vercel-app/">B</a> </span>
+    <div id="wcb" class="carbonbadge wcb-d"></div>
   </aside>
 </footer>
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+
