--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
 import { getI18N } from '../i18n';
 import Bubble from './Bubble.astro';
 import { Toast } from '../components/islands/Toast';
+import { ModalWork } from './modal/ModalWork';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
@@ -42,8 +43,7 @@ const i18n = getI18N({ currentLocale });
             stroke-width="2"
             d="m19 9l-7 6l-7-6"></path>
         </svg>
-        {i18n.HEADER.HEADER_BUTTON}</a
-      >
+        {i18n.HEADER.HEADER_BUTTON}</a>
     </div>
   </div>
   <svg
