feat: Se completa el modal de experiencia, se arregla interfaz

--- a/src/components/items/ItemsContacto.astro
+++ b/src/components/items/ItemsContacto.astro
@@ -28,7 +28,7 @@ if (currentLocale === 'es') {
       <p class="text-base-content">{text}</p>
       <div class="mt-4">
         <a
-          class="mt-4 btn btn-neutral backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-700 rounded-lg flex justify-center items-center"
+          class="mt-4 btn btn-primary backdrop-blur-[19px] backdrop-saturate-[180%] flex justify-center items-center"
           href={url}
           target="_blank"
           rel="noopener noreferrer"
