--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -86,21 +86,21 @@ const i18n = getI18N({ currentLocale });
           <div
             class="bg-transparent stats stats-horizontal backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-500 rounded-lg py-5 w-full"
           >
-            <div class="stat">
+            <div class="stat p-1">
               <div class="stat-value">+2</div>
               <div class="">{i18n.ABOUTME.ABOUT_EXPIRENCE[0].EXPIRENCE}</div>
               <div class="stat-desc">
                 {i18n.ABOUTME.ABOUT_EXPIRENCE[0].EXPIRENCE_ABOUT}
               </div>
             </div>
-            <div class="stat">
+            <div class="stat p-1">
               <div class="stat-value">+7</div>
               <div class="">{i18n.ABOUTME.ABOUT_EXPIRENCE[1].PROJECTS}</div>
               <div class="stat-desc">
                 {i18n.ABOUTME.ABOUT_EXPIRENCE[1].PROJECTS_ABOUT}
               </div>
             </div>
-            <div class="stat">
+            <div class="stat p-1">
                <ModalWork client:load/>
               <div class="">{i18n.ABOUTME.ABOUT_EXPIRENCE[2].WORKING}</div>
               <div class="stat-desc">
