--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,6 +34,7 @@ const i18n = getI18N({ currentLocale });
           viewBox="0 0 24 24"
           fill="currentColor"
           style="--sl-icon-size: 0.5em;"
+          class="animate-bounce"
         >
           <path
             fill="none"
