--- a/src/components/items/ItemsHabilidades.astro
+++ b/src/components/items/ItemsHabilidades.astro
@@ -41,7 +41,7 @@ if (currentLocale === 'es') {
             alt={`Icon for ${tech}`}
             loading="lazy"
           />
-          <span class="text-xs mt-1 text-base-content">{tech}</span> {/* Muestra el nombre de la tecnología */}
+          <span class="text-xs mt-1 text-base-content">{tech}</span>
         </div>
       ))}
     </div>
