fix: button huella ecologica

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -93,7 +93,7 @@ const i18n = getI18N({ currentLocale });
         </a>
       </div>
     </nav>
-    <span class="font-semibold text-1xl mt-4">Huella Ecologica - Calificacion <a type="button" class="btn btn-square btn-sm" target="_blank" aria-label="Huella ecologica de la pagina" href="https://www.websitecarbon.com/website/portafolio-vercel-deploy-vercel-app/">B</a> </span>
+    <span class="font-semibold text-1xl mt-4">Huella Ecologica - Calificacion <a type="button" class="btn btn-secondary btn-square btn-sm" target="_blank" aria-label="Huella ecologica de la pagina" href="https://www.websitecarbon.com/website/portafolio-vercel-deploy-vercel-app/">B</a> </span>
     <div id="wcb" class="carbonbadge wcb-d"></div>
   </aside>
 </footer>
