fix and feat: Se actualiza astro, se agrega mas soporte a idiomas,se empiza la estructura por rutas en vez de anclajes

--- a/src/components/items/ItemsNavbar.astro
+++ b/src/components/items/ItemsNavbar.astro
@@ -18,7 +18,7 @@ if (currentLocale === 'es') {
 {
   dataChange.map((list) => (
     <li>
-      <a href={list.to}> {list.label} </a>
+      <a href={list.to} aria-label={`Ir a ${list.label}`}> {list.label} </a>
     </li>
   ))
 }
