--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -24,7 +24,7 @@ const i18n = getI18N({ currentLocale });
         <div class="lg:col-span-2 lg:row-span-3">
           <div class="avatar px-3">
             <div
-              class="ring-primary ring-offset-base-100 w-72 md:w-80 lg:w-96 rounded-full ring ring-offset-2"
+              class="ring-primary ring-offset-base-100 w-72 md:w-80 lg:w-96 rounded-full ring ring-offset-4"
             >
               <img src="/yop.webp" alt="muke78" loading="lazy" />
             </div>
@@ -100,7 +100,7 @@ const i18n = getI18N({ currentLocale });
                 {i18n.ABOUTME.ABOUT_EXPIRENCE[1].PROJECTS_ABOUT}
               </div>
             </div>
-            <div class="stat p-1">
+            <div class="stat p-1 flex items-center justify-center flex-col">
                <ModalWork currentLocale={currentLocale} client:load/>
               <div class="">{i18n.ABOUTME.ABOUT_EXPIRENCE[2].WORKING}</div>
               <div class="stat-desc">
