--- a/src/components/items/ItemsHabilidades.astro
+++ b/src/components/items/ItemsHabilidades.astro
@@ -1,7 +1,7 @@
 ---
-import { dataSkills } from '../../utils/es/dataHabilidades.astro';
-import { dataSkillsEN } from '../../utils/en/dataHabilidadesEn.astro';
-import { dataSkillsFR } from '../../utils/fr/dataHabilidadesFR.astro';
+import { dataSkills } from '@/utils/es/dataHabilidades.astro';
+import { dataSkillsEN } from '@/utils/en/dataHabilidadesEn.astro';
+import { dataSkillsFR } from '@/utils/fr/dataHabilidadesFR.astro';
 
 const { currentLocale } = Astro;
 
