--- a/src/components/items/ItemsNavbar.astro
+++ b/src/components/items/ItemsNavbar.astro
@@ -1,7 +1,7 @@
 ---
-import { dataListNavbar } from '../../utils/es/dataNavbar.astro';
-import { dataListNavbarEN } from '../../utils/en/dataNavbarEN.astro';
-import { dataListNavbarFR } from '../../utils/fr/dataNavbarFR.astro';
+import { dataListNavbar } from '@/utils/es/dataNavbar.astro';
+import { dataListNavbarEN } from '@/utils/en/dataNavbarEN.astro';
+import { dataListNavbarFR } from '@/utils/fr/dataNavbarFR.astro';
 
 const { currentLocale } = Astro;
 let dataChange;
