--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,17 +1,17 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import Navbar from '../../components/Navbar.astro';
-import Header from '../../components/Header.astro';
-import Acerca from '../../components/Acerca.astro';
-import Habilidades from '../../components/Habilidades.astro';
-import Proyectos from '../../components/Proyectos.astro';
-import Contacto from '../../components/Contacto.astro';
-import Footer from '../../components/Footer.astro';
+import Layout from '@/layouts/Layout.astro';
+import Navbar from '@/components/Navbar.astro';
+import Header from '@/components/Header.astro';
+import Acerca from '@/components/Acerca.astro';
+import Habilidades from '@/components/Habilidades.astro';
+import Proyectos from '@/components/Proyectos.astro';
+import Contacto from '@/components/Contacto.astro';
+import Footer from '@/components/Footer.astro';
 ---
 
 <Layout>
   <header class="relative max-w-screen-2x1 mx-auto">
-    <Navbar />
+    <Navbar data-aos="fade-in" />
     <div id="inicio">
       <Header />
     </div>
