--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -1,7 +1,7 @@
 ---
-import { getI18N } from '../i18n';
-import Bubble from './Bubble.astro';
-import { ModalWork } from './modal/ModalWork';
+import { getI18N } from '@/i18n';
+import Bubble from '@/components/Bubble.astro';
+import { ModalWork } from '@/components/modal/ModalWork';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
@@ -72,7 +72,7 @@ const i18n = getI18N({ currentLocale });
 
         <div class="lg:col-span-2 lg:col-start-3">
           <div
-            class="backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-500 rounded-lg py-5 card"
+            class="backdrop-blur-[100px] backdrop-saturate-[180%] border border-neutral-700 rounded-lg py-5 card"
           >
             <div class="card-body">
               <p class="font-medium">
@@ -84,7 +84,7 @@ const i18n = getI18N({ currentLocale });
 
         <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2">
           <div
-            class="bg-transparent stats stats-horizontal backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-500 rounded-lg py-5 w-full"
+            class="bg-transparent stats stats-horizontal backdrop-blur-[100px] backdrop-saturate-[180%] border border-neutral-700 rounded-lg py-5 w-full"
           >
             <div class="stat p-1">
               <div class="stat-value">+2</div>
@@ -111,16 +111,6 @@ const i18n = getI18N({ currentLocale });
         </div>
 
         <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2 lg:mt-44">
-          <!-- <a
-            download
-            href="/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
-            target="_blank"
-            class="btn btn-primary w-full"
-            aria-label="Descargar cv para saber mas acerca de mi"
-          >
-            {i18n.ABOUTME.ABOUT_DOWNLOAD_CV}
-          </a> -->
-
           <a
           href="https://docs.google.com/viewer?url=https://portafolio-vercel-deploy.vercel.app/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
           target="_blank"
