--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -1,8 +1,8 @@
 ---
-import { getI18N } from '../i18n';
+import { getI18N } from '@/i18n';
 
-import Bubble from './Bubble.astro';
-import ItemsContacto from './items/ItemsContacto.astro';
+import Bubble from '@/components/Bubble.astro';
+import ItemsContacto from '@/components/items/ItemsContacto.astro';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
