--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
-import { getI18N } from '../i18n';
-import { ImageContrast } from './islands/ImageContrast';
+import { getI18N } from '@/i18n';
+import { ImageContrast } from '@/components/islands/ImageContrast';
 
 const v = "1.0.1";
 
