--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -1,8 +1,8 @@
 ---
-import { getI18N } from '../i18n';
+import { getI18N } from '@/i18n';
 
-import Bubble from './Bubble.astro';
-import ItemsHabilidades from './items/ItemsHabilidades.astro';
+import Bubble from '@/components/Bubble.astro';
+import ItemsHabilidades from '@/components/items/ItemsHabilidades.astro';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
@@ -21,7 +21,7 @@ const i18n = getI18N({ currentLocale });
         </h2>
       </div>
       <div
-        class="backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-700 rounded-lg py-5 card"
+        class="backdrop-blur-[100px] backdrop-saturate-[180%] border border-neutral-700  rounded-lg py-5 card"
       >
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
           <div
