--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import { getI18N } from '../i18n';
-import Bubble from './Bubble.astro';
-import { Toast } from '../components/islands/Toast';
+import { getI18N } from '@/i18n';
+import Bubble from '@/components/Bubble.astro';
+import { Toast } from '@/components/islands/Toast';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
