--- a/src/components/LangPicker.astro
+++ b/src/components/LangPicker.astro
@@ -1,6 +1,6 @@
 ---
-import { getI18N } from '../i18n';
-import { languages } from '../i18n/ui';
+import { getI18N } from '@/i18n';
+import { languages } from '@/i18n/ui';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
