--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -1,7 +1,7 @@
 ---
-import { getI18N } from '../i18n';
-import Bubble from './Bubble.astro';
-import { Repositorios } from './items/ItemsRepositorios';
+import { getI18N } from '@/i18n';
+import Bubble from '@/components/Bubble.astro';
+import { Repositorios } from '@/components/items/ItemsRepositorios';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
@@ -10,7 +10,7 @@ const i18n = getI18N({ currentLocale });
 <div class="hero bg-base-200 min-h-screen">
   <div class="hero-content text-center">
     <Bubble
-      class="lg:bottom-24 left-0 bg-primary"
+      class="lg:bottom-72 left-0 lg:left-28 bg-primary"
       classNameToBottom="top-80 right-0 lg:top-72 lg:right-24 bg-secondary"
     />
     <div class="max-w-5xl">
