--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Navbar.astro';
-import Header from '../components/Header.astro';
-import Acerca from '../components/Acerca.astro';
-import Habilidades from '../components/Habilidades.astro';
-import Proyectos from '../components/Proyectos.astro';
-import Contacto from '../components/Contacto.astro';
-import Footer from '../components/Footer.astro';
+import Layout from '@/layouts/Layout.astro';
+import Navbar from '@/components/Navbar.astro';
+import Header from '@/components/Header.astro';
+import Acerca from '@/components/Acerca.astro';
+import Habilidades from '@/components/Habilidades.astro';
+import Proyectos from '@/components/Proyectos.astro';
+import Contacto from '@/components/Contacto.astro';
+import Footer from '@/components/Footer.astro';
 ---
 
 <Layout>
