fix: Se quita toast version 1.0.1 finaliza

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ const i18n = getI18N({ currentLocale });
   <div class="hero-content text-center z-40">
     <Bubble />
     <div class="max-w-lg">
-      <Toast currentLocale={currentLocale} client:load />
+      <!-- <Toast currentLocale={currentLocale} client:load /> -->
       <h1 class="text-6xl xl:text-8xl lg:text-8x1 md:text-8xl font-bold">
         {i18n.HEADER.HEADER_TITLE}
       </h1>
