--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ const { currentLocale } = Astro;
 ---
 
 <!doctype html>
-<html lang={currentLocale} class="scroll-smooth bg-base-300">
+<html lang={currentLocale} class="scroll-smooth ">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -44,7 +44,7 @@ const { currentLocale } = Astro;
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     
   </head>
-  <body>
+  <body class="bg-base-300">
     <slot />
     <script
       defer
@@ -56,16 +56,8 @@ const { currentLocale } = Astro;
 <style is:global>
   html {
     transition:
-      background-color 0.5s ease-out,
-      color 0.5s ease-out;
-  }
-
-  .hero {
-    view-timeline-name: --reveal;
-    animation-name: show;
-    animation-fill-mode: none;
-    animation-timeline: --reveal;
-    animation-range: cover -50% entry 25%;
+      background-color 1s ease-out,
+      color 1s ease-out;
   }
 
   .sticky-navbar {
@@ -74,15 +66,16 @@ const { currentLocale } = Astro;
     height: 3px;
   }
 
-  @keyframes show {
-    from {
-      opacity: 0;
-      scale: 10%;
+  .shadow__cardPulse {
+    box-shadow: 0px -20px 100px -100px;
+    filter: drop-shadow(0 0 0.75rem);
+    animation: pulsate 5s infinite ease-in-out;
+    transition: box-shadow 1s ease-in-out;
+}
+
+.parallax-section {
+      position: relative;
+      overflow: hidden;
     }
 
-    to {
-      opacity: 1;
-      scale: 100%;
-    }
-  }
 </style>
