--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -10,8 +10,8 @@ import Footer from '@/components/Footer.astro';
 ---
 
 <Layout>
-  <header class="relative w-full">
-    <Navbar />
+  <header class="relative max-w-screen-2x1 mx-auto">
+    <Navbar data-aos="fade-in" />
     <div id="inicio">
       <Header />
     </div>
