--- a/src/utils/es/dataNavbar.astro
+++ b/src/utils/es/dataNavbar.astro
@@ -2,23 +2,20 @@
    export const dataListNavbar = [
     {
         label: 'Inicio',
-        to: '#inicio'
+        to: 'inicio'
     },
     {
         label: 'Acerca de mí',
-        to: '#about'
+        to: 'about'
     },
-    {
-        label: 'Habilidades',
-        to: '#skills'
-    },
+    
     {
         label: 'Proyectos',
-        to: '#projects'
+        to: 'projects'
     },
     {
         label: 'Contacto',
-        to: '#contact'
+        to: 'contact'
     }
 ]
 
