feat: Se cambia el header correcto, falta parallax

--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -9,7 +9,7 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <div class="hero min-h-screen">
-  <div class="hero-content text-center">
+  <div class="hero-content p-0 text-center">
     <!-- <Bubble
       class="top-96 bg-primary sm:left-32"
       classNameToBottom="bottom-92 right-20 bg-accent sm:right-72"
