--- a/src/pages/es/inicio.astro
+++ b/src/pages/es/inicio.astro
@@ -9,10 +9,10 @@ import Footer from '@/components/Footer.astro';
 <Layout>
   <header class="relative w-full">
     <Navbar />
-    <div id="header" class="parallax-section">
+    <div id="header">
       <Header />
     </div>
-    <div id="habilidades" class="parallax-section">
+    <div id="habilidades">
       <Habilidades />
     </div>
     <Footer />
