--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,25 +2,30 @@
 import { getI18N } from '@/i18n';
 import Bubble from '@/components/Bubble.astro';
 import { Toast } from '@/components/islands/Toast';
+import Parabola from './Parabola.astro';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
 
-<div class="hero bg-base-300 min-h-fit py-8">
+<div class="hero bg-base-300 min-h-[80vh] py-8">
   <div class="hero-content text-center">
-    <!-- <Bubble /> -->
+      <Parabola
+      class="top-60 lg:left-[25rem] bg-gradient-to-t from-base-content via-secondary skew-x-[35deg] rotate-[30deg] shadow__skew"
+      classNameToBottom="top-60 lg:right-[25rem] bg-gradient-to-t from-base-content via-primary -skew-x-[35deg] rotate-[-30deg] shadow__skew"/>
+    <div class="max-w-lg">
     <div class="max-w-lg">
       <!-- <Toast currentLocale={currentLocale} client:load /> -->
-      <h1 class="text-6xl xl:text-8xl lg:text-8x1 md:text-8xl font-bold">
-        {i18n.HEADER.HEADER_TITLE}
-      </h1>
-      <span
-        class="text-7xl xl:text-8xl lg:text-8x1 md:text-8xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary via-secondary to-accent"
-      >
-        {i18n.HEADER.HEADER_NAME}
-      </span>
-      <p class="py-5 font-medium">{i18n.HEADER.HEADER_ABOUT}</p>
+      
+        <h1 class="text-6xl xl:text-8xl lg:text-8x1 md:text-8xl font-bold">
+          {i18n.HEADER.HEADER_TITLE}
+        </h1>
+        <span
+          class="text-7xl xl:text-8xl lg:text-8x1 md:text-8xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary via-secondary to-accent"
+        >
+          {i18n.HEADER.HEADER_NAME}
+        </span>
+      <p class="py-5 font-medium text-md">{i18n.HEADER.HEADER_ABOUT}</p>
       <a
         href="#about"
         class="btn btn-primary border-none bg-gradient-to-r from-primary to-accent"
